--- a/src/Component/ChatRoom.css
+++ b/src/Component/ChatRoom.css
@@ -112,7 +112,10 @@ body {
 }
 
 .message-container {
-  padding: 10px;               
+  padding-top: 10px;
+  padding-bottom: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
   margin-bottom: 5px;          
   border-radius: 5px;         
   position: relative;          
@@ -124,10 +127,11 @@ body {
   font-size: 13px;      
   font-weight: bold;
   margin-bottom: 1%;
+  color: black;
 }
 
 .message-username {
-  margin: 5px 0 0 0;           
+  margin: 1px 0 0 0;           
   font-size: 1em;            
   color: #ffffff;                 
   text-align: right;         
@@ -138,7 +142,7 @@ body {
   position: absolute;        
   top: 10px;                   
   right: 10px;                 
-  cursor: pointer;             
+  cursor: pointer;     
 }
 
 .message-container img {
